adicionada funcionalizadade de leitura com imagem recortada

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,7 +24,7 @@
       <ion-col>
         <div class="ion-text-center">
           <h3>text-center</h3>
-          <p>{{text}}</p>
+          <p>{{ocrService.text}}</p>
         </div>
       </ion-col>
     </ion-row>
